@@ -15,6 +15,7 @@
 #include <winsock2.h>
 
 #include <colinux/os/alloc.h>
+#include <colinux/common/libc.h>
 #include <colinux/os/user/misc.h>
 
 int co_udp_socket_connect(const char *addr, unsigned short int port)
@@ -31,7 +32,7 @@ int co_udp_socket_connect(const char *addr, unsigned short int port)
 		return -1;
 	}
 
-	bzero((char *)&server, sizeof(server));
+	co_bzero((char *)&server, sizeof(server));
 	server.sin_family = AF_INET;
 	server.sin_addr.s_addr = inet_addr(addr);
 	server.sin_port = htons(port);
